Bug 58331 - Fatal error during startup (migration of legacy .zip extension fails)
Summary: Fatal error during startup (migration of legacy .zip extension fails)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta1
Hardware: Other Windows (All)
: medium blocker
Assignee: Stephan Bergmann
URL:
Whiteboard: target:4.1.0 target:4.0.0.0.beta3
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-15 10:12 UTC by Urmas
Modified: 2013-12-16 00:56 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Error message (6.97 KB, image/png)
2012-12-18 19:52 UTC, Urmas
Details
profile (211.93 KB, application/zip)
2012-12-18 19:58 UTC, Urmas
Details
legacy .zip extension to reproduce the problem (1.33 KB, application/octet-stream)
2012-12-19 12:47 UTC, Stephan Bergmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Urmas 2012-12-15 10:12:28 UTC
The Beta1 version cannot be launched:

LOdev 4.0 - Fatal Error

Unable to launch the application. 
Cannot determine the media type: vnd.sun.star.expand:$UNO_USER_PACKAGES_CACHE/uno_packages/lu15aprv.tmp_/SNIPPED.zip/description.xml
Comment 1 Petr Mladek 2012-12-18 09:47:21 UTC
Stephan, do it trigger any bell?

Urmas, could you please provide some more information?
What Windows versions are you using?
Have you done standard or custom installation?
Do you have some extra extensions installed?

Do you see the same problem also with fresh user configuration?
Please, do not remove the old configuration completely. If it works with with the fresh configuration, please zip and upload the broken one for debugging purposes. See http://wiki.documentfoundation.org/UserProfile
for some hints.
Comment 2 Michael Meeks 2012-12-18 11:07:38 UTC
Can we have an archive of your user-profile ? that URL should (I think) end up pointing there.

Thanks for filing !
Comment 3 Stephan Bergmann 2012-12-18 14:00:03 UTC
Neither "Unable to launch the application" nor "Cannot determine the media type" appear to be strings originating from the LO code base.  What does the message box (assuming you quote from one) look like (screenshot)?  Also, how exactly do you try to start LO?
Comment 4 Urmas 2012-12-18 19:52:57 UTC
Created attachment 71747 [details]
Error message
Comment 5 Urmas 2012-12-18 19:58:10 UTC
Created attachment 71749 [details]
profile

Unfortunately the original profile was not preserved, but I can reproduce this behavior by a new profile and a certain extension. Here it is with extension content removed, as it doesn't affect the reproduction.

Additionally, during its installation the following message appears:

(com.sun.star.lang.IllegalArgumentException) { { { Message = "\X041d\X0435 \X043c\X043e\X0433\X0443 \X043e\X043f\X0440\X0435\X0434\X0435\X043b\X0438\X0442\X044c \X0442\X0438\X043f \X043d\X043e\X0441\X0438\X0442\X0435\X043b\X044f \X0438\X043d\X0444\X043e\X0440\X043c\X0430\X0446\X0438\X0438: vnd.sun.star.expand:$UNO_USER_PACKAGES_CACHE/uno_packages/lupr77.tmp_/faulty.zip/description.xml", Context = (com.sun.star.uno.XInterface) @61dd54c } }, ArgumentPosition = (short) -1 }
Comment 6 Stephan Bergmann 2012-12-19 12:45:56 UTC
From the attached LOdev/4 user profile, I reconstruct that you once added per-user a "legacy" (i.e., ".zip" instead of ".oxt") extension faulty.zip (as attached) to LO 3.

Adding such legacy .zip extensions to LO 4.0 (e.g., calling "unopkg add faulty.zip" command line tool) now fails with a "Cannot detect media-type" error message.  That regression is caused by <http://cgit.freedesktop.org/libreoffice/core/commit/?id=31170413ae3786bf44564e813d7291354e939a77> "API CHANGE: com.sun.star.lang.IllegalArgumentException."
Comment 7 Stephan Bergmann 2012-12-19 12:47:24 UTC
Created attachment 71803 [details]
legacy .zip extension to reproduce the problem
Comment 8 Not Assigned 2012-12-19 12:57:04 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eaf3c60194e440e8a9bebac46f8d55ba6246001a

fdo#58331: Handle IllegalArgumentException routinely thrown for legacy exts



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Not Assigned 2012-12-19 13:48:44 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d1f56fe90c99bdff83990035f5518266916b980b&g=libreoffice-4-0

fdo#58331: Handle IllegalArgumentException routinely thrown for legacy exts


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Stephan Bergmann 2012-12-19 13:55:18 UTC
(In reply to comment #9)
> It will be available in LibreOffice 4.0.

...but not yet in beta2.