fdo#58331: Handle IllegalArgumentException routinely thrown for legacy exts

...that was no longer handled properly when installing such a legacy .zip
extension due to 31170413ae3786bf44564e813d7291354e939a77 "API CHANGE:
com.sun.star.lang.IllegalArgumentException."

Change-Id: I6f5f4be0eed16496d8d3c3623d6676c7c669c5c4